--- a/config/project.env.sample
+++ b/config/project.env.sample
@@ -11,6 +11,9 @@ RUST_LOG=info
 REQUIRE_UNC1_NUMERIC=true
 F64_IMPORT_MODE=reject
 
+# Optional: token for private/internal UBL-CORE access (clone/lock validation)
+# CORE_REPO_TOKEN=ghp_xxx
+
 # Core-only features by default (you can enable later)
 UBL_FEATURE_AUDIT_ENABLED=false
 UBL_FEATURE_ADVISOR_ENABLED=false
